--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href=".images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100&family=Lexend+Deca&display=swap" rel="stylesheet">
@@ -17,21 +17,21 @@
 <main>
   <div class="cards">
     <div id="sedans"> 
-      <img src="/images/icon-sedans.svg" alt="A sedan logo"> 
+      <img src="images/icon-sedans.svg" alt="A sedan logo"> 
       <div class="heading">Sedans</div>
       <p>A sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.</p> 
       <div><button type="button">Learn More</button></div>
     </div>
     <div id="suvs">  
-      <img src="/images/icon-suvs.svg" alt="An SUV logo">
+      <img src="images/icon-suvs.svg" alt="An SUV logo">
       <div class="heading">SUVs</div>
       <p>A SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
         and off-road adventures.</p> 
       <div><button type="button">Learn More</button></div>
     </div>
     <div id="luxury">  
-      <img src="/images/icon-luxury.svg" alt="A luxury logo">
+      <img src="images/icon-luxury.svg" alt="A luxury logo">
       <div class="heading">Luxury</div>
       <p>In the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.</p> 
